--- a/gb/ncid278_6.md
+++ b/gb/ncid278_6.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503585.md#1" target="_blank">维权律师遭打压 程海控告傅政华等20余人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503585.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-142628837-600x400-150x120.jpg" align ="left"></a>人权律师程海于近日公开发出控告，控告中共司法部部长傅政华，北京市、昌平区司法局及北京市律师协会二十余人，是嚣张打压律师的黑恶势力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月07日 3:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503913.md#1" target="_blank">2019年上半年 四川法轮功学员遭迫害综述</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-9-5-mh-sichuan-persecution-1-150x120.png" align ="left"></a>1月至6月，四川省法轮功学员中有4人被迫害致死，25人被枉判，216人被绑架，74人仍然被非法关押，其中12人被绑架到洗脑班（10人已回家），206人被骚扰，247家被非法抄家抢劫，被抢劫的现金数额为154,200元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月07日 2:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503759.md#1" target="_blank">世卫：中国有全球最大的丙型肝炎问题</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503759.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-134277425-150x120.jpg" align ="left"></a>世界卫生组织（WHO）指出，中国大陆正面临丙型肝炎疫情，如果患者不加以治疗，可导致肝硬化、肝癌和早逝的传染病，其中以农村地区的影响尤为严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月07日 12:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/5/n11501163.md#1" target="_blank">8月末 河南30名法轮功学员及家属遭绑架</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/5/n11501163.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-180-600x370-2-150x120.jpg" align ="left"></a>8月30日至31日，河南省南阳市市区及十几个县至少30位法轮功学员被绑架。参与这次非法行动的单位有南阳市委、政府、政法委、“610”（专门迫害法轮功的非法机构）、公安局等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月06日 3:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/5/n11501995.md#1" target="_blank">【新闻看点】德国总理访华 默克尔如走钢丝</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/5/n11501995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-498669806-600x400-150x120.jpg" align ="left"></a>在美中贸易战和香港暴力镇压抗议民众的大背景下，默克尔任内的第12次访华，时机颇为敏感。德国议会多个政党纷纷要求她，与中共领导人会谈中要谈香港人权问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月06日 3:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11497103.md#1" target="_blank">威尼斯首映 好莱坞大片揭中共活摘</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11497103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c10e03c81e7965_ttl7daynhp_4-DSC_6278-150x120.jpg" align ="left"></a>“这是以十分幽默的方式，讲述一个非常非常黑暗的笑话。”9月1日，美国著名影星梅丽．史翠普（Meryl Streep，梅姨）介绍她主演的新片《洗钞事务所》时如是说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 12:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11499456.md#1" target="_blank">【新闻看点】林郑撤修例 北京反常 港人怒难平</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11499456.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/75df0559005d014f92e6c402ac9748a9-1-150x120.jpg" align ="left"></a>今天（9月4日）下午，林郑发表长达8分钟电视讲话表示，“正式撤回”《逃犯条例》修订草案，不过她没有回应市民的其它四大要求。对这个重大事件，中共官媒并没有马上报导，但是网络先沸腾了。许多网民质疑“这是中央的意思吗？”还有许多大陆网民对林郑进行责骂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 6:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495958.md#1" target="_blank">凄楚无助 一群苦难的中国孩子（2）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/55f28666afe7a2f82b7f655bba524394-150x120.jpg" align ="left"></a>年年中秋月圆时，多少孩子泪湿巾。在中国大陆，无数孩子仅仅因为父母或他们自己对法轮功“真、善、忍”的信仰与追求，而遭受迫害，失去了父母、失去学业、失去自由，甚至失去了所有的生存条件和做人的尊严。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 5:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11499635.md#1" target="_blank">佩洛西：欢迎林郑撤回引渡条例 但还远不够</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11499635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1164374691-150x120.jpg" align ="left"></a>美国众议院议长佩洛西周三（9月4日）对香港政府宣布撤回《引渡条例》的举动表示欢迎，但她表示，港府的举措还远远不够，而美国国会仍会迅速推进《香港人权与民主法案》以抑制中共未来可能的镇压企图。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 5:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11499462.md#1" target="_blank">专家：中共本性注定对香港“二次回归”政策</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11499462.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/190721150831100615-150x120.jpg" align ="left"></a>专家指出，蚕食香港是中共既定的政策，对香港的“二次回归”实质就是中共强化“一国”，削弱从而最终消灭香港的“两制”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 2:40 AM							</td></tr>
@@ -16,18 +23,11 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495010.md#1" target="_blank">美媒：法轮功群体在戈申找到自由</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11495010.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Screen-Shot-2019-09-02-at-9.13.23-PM-e1567473315377-150x120.png" align ="left"></a>日前，纽约上州一家媒体《编年史报》（The Chronicle）报导了法轮功学员在戈申地区的一个公园炼功活动，并向读者介绍了法轮功以及法轮功学员在中国遭受迫害的情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 9:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494592.md#1" target="_blank">英外交委员会主席投书：应给港人英国籍</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1135884500-150x120.jpg" align ="left"></a>英国外交事务委员会的主席汤姆?图根哈特（Tom Tugendhat）周一（9月2日）投书美国杂志《大西洋》（The Atlantic），呼吁伦敦开放确认符合条件的香港人成为英国公民。他在文中指出，恢复许多在英中交接时失去的权利可以减少香港抗议活动的利害关系，并鼓励政治对话。他认为，这是目前解决动乱的唯一方案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 7:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494734.md#1" target="_blank">香港抗议者论坛8.31遭大规模网攻 部分源于中共</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494734.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/11/1505252241191873-150x120.jpg" align ="left"></a>香港抗议者使用的连登讨论区（LIHKG）日前发布声明表示，其服务器8月31日遭到大型DDos攻击（分散式阻断服务攻击），一些攻击源于中国大陆。此次攻击规模“前所未见”，有理由相信是有组织性，甚至达到国家级别的攻击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 5:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488590.md#1" target="_blank">2019年上半年 长春法轮功学员遭迫害综述</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488590.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/2019-8-29-mh-changchun-persecution-1-150x120.png" align ="left"></a>1月至6月，吉林省长春市法轮功学员遭长春政法委和专门迫害法轮功的非法机构“610”迫害，导致宋兆恒、张援援在迫害中离世，至少27人遭非法判刑或庭审，78人（含一位法轮功学员家属）遭绑架，21人遭骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 5:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494616.md#1" target="_blank">重庆法轮功学员遭非法抄家 采集血样</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/maxresdefault-150x120.jpg" align ="left"></a>重庆南岸区，老年法轮功学员76岁的刘昌秀和75岁的周良荣分别在2019年8月22日、23日被非法抄家，劫持到派出所按指纹、采血样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 4:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494145.md#1" target="_blank">北京英特尔软件公司女员工刘东兴 遭非法判刑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494145.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/youxing_10-150x120.jpg" align ="left"></a>北京英特尔软件公司现年32岁的刘东兴女士，坚持修炼法轮功“真善忍”，被非法判三年半。刘东兴不承认非法“判决”，要求上诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494136.md#1" target="_blank">南京高校教室装人脸识别引吐槽：给领导装上</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494136.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/ss-1-150x120.jpg" align ="left"></a>江苏南京的中国药科大学在校园及部分教室引入人脸识别系统，学生听课情况会被全程监控，学生发呆、打瞌睡和玩手机等行为，随时会被监测及发现。消息在网上引发强烈吐槽，炮轰学校变态，并纷纷建议把“人脸识别”安装到中共各级政府部门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11492546.md#1" target="_blank">组图：多国法轮功学员伦敦守夜 悼遇难同修</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11492546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909012222592188-150x120.jpg" align ="left"></a> 有这样一盏烛光，闪亮了十七年；有这样一群人，十七年来每一天每一小时都坚守在中共驻伦敦大使馆前静坐，用和平方式向世人讲述真相。从2002年起，英国法轮大法弟子在中领馆馆前锲而不舍的坚持，蕴含了巨大的力量，展现了法轮功学员坚毅不屈的高贵风貌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 7:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492305.md#1" target="_blank">抗议者步行撤离 数百私家车发起义载救援</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/photo_2019-09-02_06-57-34-1-150x120.jpg" align ="left"></a>大批抗议者9月1日响应网上号召，到机场“和你塞”抗议，继续向政府施压。港铁配合港府与警方行动，停开机场快线与东涌线，示威者只能徒数小时返回本岛，中途有大批私家车发起#backhome救援行动，义载抗议者安全回家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 4:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491954.md#1" target="_blank">被剥夺退休金17年 退休校长张全兴冤死</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491954.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-8-31-euro-fahui-london-rally_03-150x120.jpg" align ="left"></a>河北张家口80岁的法轮功学员张全兴，坚持修炼法轮功，被迫害得家破人亡，其退休金17年被当局剥夺，靠别人救济维生，于2019年5月含冤离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 2:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490896.md#1" target="_blank">微信触角伸到海外 为境外用户带来哪些风险</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>中国的互联网是世界上监视和审查最多的网络空间之一，包括被广泛使用的微信。现在微信（WeChat ）使用扩张到海外，研究人员表示，微信在国外的使用令中共在全球扩张其监控和审查的范围。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 2:05 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/48649247712_848cb21102_h-150x120.jpg" align ="left"></a>8月30日，来自30多个国家的部分法轮功学员齐聚英国伦敦，举行集会游行等活动，美国记者、作家伊森·葛特曼（Ethan Gutmann）在集会上发言，他呼吁全球制止中共活摘法轮功等良心犯器官的罪行，并问责中共的同谋犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 1:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488429.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（1）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488429.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/60b8df8f39fab80b-150x120.jpg" align ="left"></a>“警察曾跟我说，如果这的监狱关不下会把你们关到新疆的大沙漠里去，现在沙漠里的监狱在扩建，在沙漠里你多少天都走不出来。即使逃出了监狱，你也逃不出沙漠，必定死在沙漠里。你在哪死的，你怎么死的，你经历了什么，是永远不会有人知道的。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 7:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503348.md#1" target="_blank">默克尔访华提香港问题 李克强首次公开表态</a><br></h3>，默克尔表示她与李克强讨论了香港问题，认为需要和平解决有关问题；李克强则表示，北京希望停止香港发生的动荡。中共政权“坚定不移地保障‘一国两制’，‘港人治港’，高度自治。”李克强还说，香港过去几个星期，一直受到示威活动影响，北京希望香港这个前英国殖民地，避免出现动荡。这是香港反修例风波持续3个月以来，中共最高层官员公开谈及香港示威情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月06日 9:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503166.md#1" target="_blank">南京74岁大校军医 遭非法判刑三年</a><br></h3>南京74岁大校军医、法轮功学员高广思，因坚持信仰法轮功，遭南京玄武区法院非法判刑3年，至今已被非法关押在苏州监狱2年之久。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月06日 7:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/5/n11501658.md#1" target="_blank">【新闻看点】林郑多变 北京诡异 五毛炸锅</a><br></h3>反送中发生重大转折后，中共接连出现诡异现象，其中缘由相当值得玩味。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月06日 3:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/5/n11501154.md#1" target="_blank">虐待病人 珠海一精神病院被指似集中营</a><br></h3>珠海一家民营精神病医院，强迫病人劳动，用坐电椅惩罚病人，被指控“跟集中营差不多”。举报人提供了相关人证和物证，然而，中共信访系统不做任何调查取证，一味歪曲事实，掩盖罪恶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 9:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/3/n11496795.md#1" target="_blank">2019年1至7月 云南法轮功学员遭迫害综述</a><br></h3>1月至7月云南省1名法轮功学员被迫害去世，3名法轮功学员被非法庭审，6名法轮功学员被非法判刑，17人被绑架，至少23人被骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 7:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494405.md#1" target="_blank">受7年冤狱迫害 西安七旬老人再遭冤判9年</a><br></h3>8月22日，陕西省西安市莲湖区70岁老年法轮功学员马蕴华，被非法判9年、勒索罚金2万元，她已上诉。马蕴华曾经被非法判刑7年，在陕西省女子监狱遭受了惨无人道的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 10:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488447.md#1" target="_blank">河北女青年在北京遭劫持 父亲找女儿被扣留</a><br></h3>8月11日下午6点半，河北涞水县法轮功学员李爽乘坐北京121路公交车时，突然北京市西城区阜成门外派出所警察拦住了公交车，把她劫持到北京西城区看守所。她父亲去打听她的情况时被派出所扣留。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 2:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491214.md#1" target="_blank">河北医学专家李延春夫妇 遭非法判刑</a><br></h3>8月27日，河北省秦皇岛市法轮功学员李延春与妻子裴玉贤，遭非法判刑，李延春七年六个月，勒索罚金二万元；裴玉贤四年，勒索罚金五千元。夫妻俩当庭表示上诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 10:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_5.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;6&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_7.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/ncid278_6.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_6.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/ncid278_6.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_6.htm">http://www.epochtimes.com/gb/ncid278_6.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
